--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,14 +6,15 @@ schema:
 features:
   - nonFatalErrors
   - grafting
+
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: sepolia
+    network: deepbrainchain-testnet
     source:
       address: "0x0227628f3F023bb0B980b67D528571c95c6DaC1c"
       abi: Factory
-      startBlock: 3518270
+      startBlock: 1
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -39,7 +40,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pool
-    network: sepolia
+    network: deepbrainchain-testnet
     source:
       abi: Pool
     mapping:
