--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "buildonly": "graph build",
     "deploy:alchemy": "graph deploy --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz",
     "codegen": "graph codegen --output-dir src/types/",
-    "test": "graph test -d",
+    "test": "graph test ",
     "test:no-tty": "docker run -i --rm --mount type=bind,source=$INIT_CWD,target=/matchstick matchstick",
     "create-local": "graph create ianlapham/uniswap-v3 --node http://127.0.0.1:8020",
-    "deploy-local": "graph deploy ianlapham/uniswap-v3 --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
+    "create-test": "graph create ianlapham/uniswap-v3-test --node http://8.214.55.62:8020",
+    "deploy-local": "graph deploy ianlapham/uniswap-v3 --ipfs http://localhost:5001 --node http://127.0.0.1:8020  --version-label v0.0.1",
+    "deploy-test": "graph deploy  ianlapham/uniswap-v3-test  --ipfs http://8.214.55.62:8021 --node http://8.214.55.62:8020 --version-label v0.0.1 ",
+
     "deploy": "graph deploy ianlapham/uniswap-v3-subgraph --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug",
     "deploy-dev": "graph deploy sommelier/uniswap-v3 --ipfs http://35.197.14.14:5000/ --node http://35.197.14.14:8020/ --debug",
     "deploy-staging": "graph deploy $THE_GRAPH_GITHUB_USER/$THE_GRAPH_SUBGRAPH_NAME /Uniswap --ipfs https://api.staging.thegraph.com/ipfs/ --node https://api.staging.thegraph.com/deploy/",
