--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "deploy": "graph deploy ianlapham/uniswap-v3-subgraph --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug",
     "deploy-dev": "graph deploy sommelier/uniswap-v3 --ipfs http://35.197.14.14:5000/ --node http://35.197.14.14:8020/ --debug",
     "deploy-staging": "graph deploy $THE_GRAPH_GITHUB_USER/$THE_GRAPH_SUBGRAPH_NAME /Uniswap --ipfs https://api.staging.thegraph.com/ipfs/ --node https://api.staging.thegraph.com/deploy/",
-    "watch-local": "graph deploy ianlapham/uniswap-v3 --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001"
+    "watch-local": "graph deploy ianlapham/uniswap-v3 --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001",
+
+    
+
+
+    "create-mainnet": "graph create ianlapham/dbcswap-v3-mainnet --node http://8.214.55.62:8034",
+    "deploy-mainnet": " graph deploy ianlapham/dbcswap-v3-mainnet --ipfs http://8.214.55.62:8031 --node http://8.214.55.62:8034 --version-label v0.0.1"
+
+
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.64.1",
